test-cases/negative/test_034_expect_error_incomplete.lay
# negative test: incomplete expect error statement
# expected: error should be thrown during execution
# this test should compile but fail at runtime when expect error is incomplete

expect error
  throw 'error'
# missing 'with message' clause
